# VIz_Agent

./: README.md  agents.py  app.py  main.py  pyproject.toml  run_agent.py  tools.py
agents/: Orchestrator.py
agents/tools/: data_extractor.py
data/: sample.csv
output/: auto_detect_parsed.json  sample_parsed.json  test_data_parsed.json
tests/: test_data_extractor.py
tools/: data_extractor.py
utils/: artifact.py
